--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:temp-app": "node dist/temp-app/server/server.mjs"
-  },
+    "test": "ng test"  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.2.0",
@@ -18,7 +16,6 @@
     "@angular/forms": "^18.2.0",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
-    "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.19",
     "bootstrap": "^5.3.7",
